--- a/src/app/pages/course/create-lecture/create-lecture.component.html
+++ b/src/app/pages/course/create-lecture/create-lecture.component.html
@@ -133,7 +133,7 @@
                                     style="font-size: 12.75px;">
                                     Select Teacher</label>
 
-                                <div class="col-sm-9">
+                                <div class="col-sm-2">
                                     <nb-select formControlName="teacher_id" placeholder="Select Teacher">
                                         <nb-option *ngFor="let teacher of teachers" value={{teacher.id}}>
                                             {{teacher.name}}</nb-option>
@@ -155,18 +155,16 @@
                                 <label for="student_fee" class="label col-sm-4 form-control-label"
                                     style="font-size: 12.75px;">Enter Student Fee Amount</label>
                                 <div class="col-sm-8">
-                                    <input type="text" formControlName="student_fee" nbInput fullWidth id="student_fee"
-                                        style="font-size: 12.75px;" placeholder="Eg: 1700"
-                                        [ngClass]="{'form-control-danger': paymentForm.invalid && (paymentForm.dirty || paymentForm.touched)}">
+                                    <input type="number" formControlName="student_fee" nbInput fullWidth
+                                        id="student_fee" style="font-size: 12.75px;" placeholder="Eg: 1700">
                                 </div>
                             </div> <br>
                             <div class="form-group row">
                                 <label for="fixed_institute_amount" class="label col-sm-4 form-control-label"
                                     style="font-size: 12.75px;">Enter Fixed Institute Amount</label>
                                 <div class="col-sm-8">
-                                    <input type="text" formControlName="fixed_institute_amount" nbInput fullWidth
-                                        id="fixed_institute_amount" style="font-size: 12.75px;" placeholder="Eg: 300"
-                                        [ngClass]="{'form-control-danger': paymentForm.invalid && (paymentForm.dirty || paymentForm.touched)}">
+                                    <input type="number" formControlName="fixed_institute_amount" nbInput fullWidth
+                                        id="fixed_institute_amount" style="font-size: 12.75px;" placeholder="Eg: 300">
                                 </div>
                             </div><br>
                             <div class="form-group row">
@@ -174,10 +172,10 @@
                                     style="font-size: 12.75px;">Enter Teacher Percentage</label>
                                 <div class="col-sm-8">
                                     <input type="text" formControlName="teacher_percentage" nbInput fullWidth
-                                        id="teacher_percentage" style="font-size: 12.75px;" placeholder="Eg: 70"
-                                        [ngClass]="{'form-control-danger': paymentForm.invalid && (paymentForm.dirty || paymentForm.touched)}">
+                                        id="teacher_percentage" style="font-size: 12.75px;" placeholder="Eg: 70">
                                 </div>
                             </div>
+                            <input type="hidden" formControlName="valid">
                             <button nbButton nbStepperPrevious type="button">prev</button>
                             <button nbButton nbStepperNext type="submit" (click)="moveIn()">next</button>
                         </form>
@@ -196,13 +194,19 @@
                                                 Enter Schedule Start Date</label>
                                             <br>
                                             <input type="date" class="form-control"
-                                                formControlName="schedule_start_date" min="2020-09-10">
+                                                formControlName="schedule_start_date" min={{todaysDate}}
+                                                max="{{scheduleForm.value.schedule_end_date}}">
                                             <br>
                                             <label class="form-control-label" style="font-size: 14px;">Enter
                                                 Enter Schedule End Date</label>
                                             <br>
-                                            <input type="date" class="form-control" formControlName="schedule_end_date"
-                                                min="2020-09-10">
+                                            <input *ngIf="scheduleForm.value.schedule_start_date!=''; else dateDisabled"
+                                                type="date" class="form-control" formControlName="schedule_end_date"
+                                                min={{scheduleForm.value.schedule_start_date}}>
+                                            <ng-template #dateDisabled>
+                                                <input type="date" disabled class="form-control"
+                                                    min={{scheduleForm.value.schedule_start_date}}>
+                                            </ng-template>
                                         </nb-card-body>
                                     </nb-card>
                                 </div>
@@ -216,13 +220,18 @@
                                             <label class="form-control-label" style="font-size: 14px;">Enter
                                                 Enter Schedule Start Time</label>
                                             <br>
-                                            <input class="form-control" type="time" step="2"
-                                                formControlName="start_time">
+                                            <input class="form-control" type="time" formControlName="start_time"
+                                                max={{scheduleForm.value.end_time}}>
                                             <br>
                                             <label class="form-control-label" style="font-size: 14px;">Enter
                                                 Enter Schedule End Time</label>
                                             <br>
-                                            <input class="form-control" formControlName="end_time" type="time" step="2">
+                                            <input class="form-control" formControlName="end_time" type="time">
+
+                                            <!-- <ng-template #timeDisabled>
+                                                <input disabled class="form-control" formControlName="end_time"
+                                                    type="time" step="2">
+                                            </ng-template> -->
                                         </nb-card-body>
                                     </nb-card>
                                 </div>
@@ -236,13 +245,10 @@
                                             <label class="form-control-label" style="font-size: 14px;">Enter
                                                 Select Room Number</label>
                                             <br>
-                                            <select id="course" class="form-control" formControlName="room_id"
+                                            <select class="form-control" formControlName="room_id"
                                                 placeholder="Select Room Id">
-                                                <option value="1">Room 1</option>
-                                                <option value="2">Room 2</option>
-                                                <option value="3">Room 3</option>
-                                                <option value="4">Room 4</option>
-                                                <option value="5">Room 5</option>
+                                                <option *ngFor="let room of rooms" value={{room.id}}>{{room.name}}
+                                                </option>
                                             </select>
                                         </nb-card-body>
                                     </nb-card>
