--- a/src/app/pages/report-generation/fee-reports/fee-reports.component.html
+++ b/src/app/pages/report-generation/fee-reports/fee-reports.component.html
@@ -1,161 +1,3 @@
-<ng-template #dialog let-data let-ref="dialogRef">
-    <nb-card id="addNewForm">
-        <nb-card-header>Select Filter Options</nb-card-header>
-        <nb-card-body>
-
-            <div class="card">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <label>Filter By</label>
-                            </div>
-                            <div class="col-sm-8">
-                                <nb-select placeholder="Select Filter Option">
-                                    <nb-option value="all">None(All Records)</nb-option>
-                                    <nb-option value="course">Course</nb-option>
-                                    <nb-option value="subject">Subject</nb-option>
-                                    <nb-option value="lecture">Lecture/Class</nb-option>
-                                    <nb-option value="teacher">Teacher</nb-option>
-                                    <nb-option value="lecture_type">Lecture Type</nb-option>
-                                </nb-select>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div><br>
-
-
-            <div class="card">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <label>Course</label>
-                            </div>
-                            <div class="col-sm-8">
-                                <nb-select placeholder="Choose Course" (selectedChange)="selectCourse($event)">
-                                    <nb-option *ngFor="let course of courses" value={{course.id}}>{{course.name}}
-                                    </nb-option>
-                                </nb-select>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div><br>
-
-            <div class="card">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <label>Teacher</label>
-                            </div>
-                            <div class="col-sm-8">
-                                <nb-select placeholder="Choose Teacher">
-                                    <nb-option value="advance_level">Keerthi Kaariyavasam</nb-option>
-                                    <nb-option value="ordinary_level">Muzain Mubarak</nb-option>
-                                    <nb-option value="ordinary_level">Naiomi Ekanaayaka</nb-option>
-                                    <nb-option value="ordinary_level">Leelarathna</nb-option>
-                                    <nb-option value="ordinary_level">Isham Mohammed</nb-option>
-                                </nb-select>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div><br>
-
-            <div class="card">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <label>Report Timespan</label>
-                            </div>
-                            <div class="col-sm-8">
-                                <nb-select placeholder="Choose Timespan of report">
-                                    <nb-option value="advance_level">Select By Month</nb-option>
-                                    <nb-option value="ordinary_level">Select By Date Range</nb-option>
-                                    <nb-option value="ordinary_level">All Time</nb-option>
-                                </nb-select>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div><br>
-
-            <!-- <div class="card">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <label>Select Year</label>
-                            </div>
-                            <div class="col-sm-8">
-                                <nb-select formControlName="course_type" placeholder="Year">
-                                    <nb-option value="advance_level">2020</nb-option>
-                                    <nb-option value="ordinary_level">2021</nb-option>
-                                </nb-select>
-                            </div>
-                        </div><br>
-
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <label>Select Month</label>
-                            </div>
-                            <div class="col-sm-8">
-                                <nb-select formControlName="course_type" placeholder="Month">
-                                    <nb-option value="advance_level">January</nb-option>
-                                    <nb-option value="advance_level">February</nb-option>
-                                    <nb-option value="advance_level">March</nb-option>
-                                    <nb-option value="advance_level">April</nb-option>
-                                    <nb-option value="advance_level">May</nb-option>
-                                    <nb-option value="advance_level">June</nb-option>
-                                    <nb-option value="advance_level">July</nb-option>
-                                    <nb-option value="advance_level">August</nb-option>
-                                    <nb-option value="advance_level">September</nb-option>
-                                    <nb-option value="advance_level">October</nb-option>
-                                    <nb-option value="advance_level">November</nb-option>
-                                    <nb-option value="advance_level">December</nb-option>
-                                </nb-select>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div><br> -->
-
-            <!-- <div class="card">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <label>From : </label>
-                            </div>
-                            <div class="col-sm-8">
-                                <input type="date" class="form-control" min="2020-09-10">
-                            </div>
-                        </div><br>
-
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <label>To :</label>
-                            </div>
-                            <div class="col-sm-8">
-                                <input type="date" class="form-control" min="2020-09-10">
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div> -->
-
-        </nb-card-body>
-        <nb-card-footer>
-            <button nbButton (click)="ref.close()">Back</button>
-            <button nbButton id="submitButton" (click)="submitFilter(ref, data)">Submit</button>&nbsp;
-        </nb-card-footer>
-    </nb-card>
-</ng-template>
-
 <nb-card class="card">
     <nb-card-header>
         Student Fee Reports.
@@ -191,7 +33,7 @@
                     </div>
                     <div class="col-sm-8">
                         <div class="btn-group" role="group" aria-label="Basic example">
-                            <button type="button" class="btn btn-outline-secondary">PDF</button>
+                            <button type="button" (click)="makePDF()" class="btn btn-outline-secondary">PDF</button>
                             <button type="button" class="btn btn-outline-secondary">Excel</button>
                             <button type="button" class="btn btn-outline-secondary">CSV</button>
                         </div>
@@ -218,3 +60,178 @@
         </div>
     </nb-card-body>
 </nb-card>
+
+<ng-template #dialog let-data let-ref="dialogRef">
+    <nb-card id="addNewForm">
+        <nb-card-header>Select Filter Options</nb-card-header>
+        <nb-card-header>
+            <div class="animated fadeIn">
+                <div class="alert alert-danger" role="alert" *ngIf="studentFeeReportAlert.status=='error'">
+                    {{ studentFeeReportAlert.message }}
+                </div>
+                <div class="alert alert-warning" role="alert" *ngIf="studentFeeReportAlert.status=='warning'">
+                    {{ studentFeeReportAlert.message }}
+                </div>
+                <div class="alert alert-success" role="alert" *ngIf="studentFeeReportAlert.status=='success'">
+                    {{ studentFeeReportAlert.message }}
+                </div>
+            </div>
+        </nb-card-header>
+        <nb-card-body>
+
+            <div class="card">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>Filter By</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <nb-select placeholder="Select Filter Option"
+                                    (selectedChange)="selectFilterOption($event)" [(ngModel)]="filter.filterOption">
+                                    <nb-option value="all">None(All Records)</nb-option>
+                                    <nb-option value="course">Course</nb-option>
+                                    <nb-option value="lecture">Lecture/Class</nb-option>
+                                    <nb-option value="teacher">Teacher</nb-option>
+                                    <nb-option value="level">Course Level</nb-option>
+                                </nb-select>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div><br>
+
+
+            <div class="card" *ngIf="filterOption=='course'">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>Course</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <nb-select placeholder="Choose Course" (selectedChange)="selectCourse($event)"
+                                    [(ngModel)]="filter.courseId">
+                                    <nb-option *ngFor="let course of courses" value={{course.id}}>{{course.name}}
+                                    </nb-option>
+                                </nb-select>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div><br>
+
+            <div class="card" *ngIf="filterOption=='teacher'">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>Teacher</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <nb-select placeholder="Choose Teacher">
+                                    <nb-option value="advance_level">Keerthi Kaariyavasam</nb-option>
+                                    <nb-option value="ordinary_level">Muzain Mubarak</nb-option>
+                                    <nb-option value="ordinary_level">Naiomi Ekanaayaka</nb-option>
+                                    <nb-option value="ordinary_level">Leelarathna</nb-option>
+                                    <nb-option value="ordinary_level">Isham Mohammed</nb-option>
+                                </nb-select>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div><br>
+
+            <div class="card" *ngIf="filterOption!=null">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>Report Timespan</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <nb-select placeholder="Choose Timespan of report"
+                                    (selectedChange)="selectTimeSpan($event)" [(ngModel)]="filter.reportTimeSpan">
+                                    <nb-option value="by_month">Select By Month</nb-option>
+                                    <nb-option value="by_range">Select By Date Range</nb-option>
+                                    <nb-option value="all_time" selected>All Time</nb-option>
+                                </nb-select>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div><br>
+
+            <div class="card" *ngIf="timeSpan=='by_month'">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>Select Year</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <nb-select placeholder="Year" [(ngModel)]="filter.by_month.year">
+                                    <nb-option value="2020">2020</nb-option>
+                                    <nb-option value="2021">2021</nb-option>
+                                </nb-select>
+                            </div>
+                        </div><br>
+
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>Select Month</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <nb-select placeholder="Month" [(ngModel)]="filter.by_month.month">
+                                    <nb-option value="January">January</nb-option>
+                                    <nb-option value="February">February</nb-option>
+                                    <nb-option value="March">March</nb-option>
+                                    <nb-option value="April">April</nb-option>
+                                    <nb-option value="May">May</nb-option>
+                                    <nb-option value="June">June</nb-option>
+                                    <nb-option value="July">July</nb-option>
+                                    <nb-option value="August">August</nb-option>
+                                    <nb-option value="September">September</nb-option>
+                                    <nb-option value="October">October</nb-option>
+                                    <nb-option value="November">November</nb-option>
+                                    <nb-option value="December">December</nb-option>
+                                </nb-select>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div><br>
+
+            <div class="card" *ngIf="timeSpan=='by_range'">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>From : </label>
+                            </div>
+                            <div class="col-sm-8">
+                                <input type="date" class="form-control" min="2020-09-10"
+                                    [(ngModel)]="filter.by_range.from_date">
+                            </div>
+                        </div><br>
+
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>To :</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <input type="date" class="form-control" min="2020-09-10"
+                                    [(ngModel)]="filter.by_range.to_date">
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+        </nb-card-body>
+        <nb-card-footer>
+            <button nbButton (click)="ref.close()">Back</button>
+            <button nbButton id="submitButton" (click)="submitFilter(ref, data)">Submit</button>&nbsp;
+        </nb-card-footer>
+    </nb-card>
+</ng-template>
